3.6.0
* Post DiFX 2.5
* Remove unneeded source file

3.5.0
* Post DiFX 2.4
* Consider equality of EOP values when merging jobs
* Implement EOP merging modes.  Currently this will be set automatically based total number of days spanned by EOPs.
  - Relaxed means merge EOPs if they are consistent, with a resulting maximum of 6 days of values
  - Strict means only merge if EOPs cover the same days
  - In either case, refuse to merge if the EOPs are different on any day
* Replaced string with enums for three parameter names
  - Note: this breaks API compatibility.  Be sure to recompile all dependent code after updating difxio.
* Fix merging of tables containing model extensions when different scans have different subsets of antennas
* New utility: tabulatedelays.  Will make a list of evaluated delay polynomials every 24 seconds (on the usual grid of model points).  Delays and rates are printed.
* New utility: reducepoly.  Will reduce the order of the delay model polynomial.  [Needs GSL]
* New function: evaluateDifxAntennaClock
* Write Parallactic Angle and/or Refraction Corrected Elevation to .im file if they are populated
* Support MARK6 data source
* Improved precision on some output values
* Improved sanity checking on many internal functions
* Some merging from the RadioAstron branch
  - James Anderson to fill in details here
  - Some new capabilities commented out with  "#ifdef RA_MERGED .. #endif" constructs, awaiting changes in mpifxcorr
* New utility: avgDiFX: program to average two .difx/DIFX... files and their parent filesets.
* Make DataSourceNone a legitimate (non-default) source of data.  DataSourceUnspecified now takes the role of an uninitialized value.  
* Remove ill-conceived function: DifxInputGetDatastreamId
* Fixed function DifxConfigRecBand2FreqPol to be compatible with multiple data streams
* Add parameter to track delay model program to use (stored in .calc file)
* API-breaking changes: